syntax = "proto3";

package proto;

option go_package = "github.com/pearlsteinj/bazel-example/proto/backend";

service BackendService {
  rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse);
}

message HelloWorldRequest {
  int32 request_id = 1;
}

message HelloWorldResponse {
  string response_id = 1;
  string message_response = 2;
}